--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+}
