change id back btn

--- a/src/app/components/team-results-card/team-results-card.component.html
+++ b/src/app/components/team-results-card/team-results-card.component.html
@@ -17,7 +17,7 @@
         </div>
     </div>
     <button
-      id="backButton"
+      id="backBtn"
       type="button"
       [routerLink]="['']"
     >
