change id in scss

--- a/src/app/components/team-results-card/team-results-card.component.scss
+++ b/src/app/components/team-results-card/team-results-card.component.scss
@@ -3,7 +3,7 @@
     border: 1px solid black;
     padding: 8px;
 
-    #backButton {
+    #backBtn {
         width: 100%;
         padding: 12px;
         background-color: green;
